fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -58,6 +58,9 @@
 	padding: 0;
 }
 
+.author-container .clearfix{
+    padding-top: 40px;
+}
 
 @media (max-width: 820px) {
     .author-info-image {
